upgraded to java 22, spring boot 3, friendly-ssl 2.0